--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,8 @@ dependencies:
   firebase_auth: ^5.3.0
   cloud_firestore: ^5.4.2
   firebase_core: ^3.5.0
+  provider: ^6.1.2
+  flutter_spinkit: ^5.2.1
 
 dev_dependencies:
   flutter_test:
